--- a/styles/download-cv-button.css
+++ b/styles/download-cv-button.css
@@ -8,12 +8,12 @@
   fill: none;
   width: 10px;
   height: 16px;
-  margin: 0 0 0 14px;
+  margin: 0 0 0 10px;
   transform: translate3d(0, 0, 0);
 }
 
 .btn svg path {
-  stroke: #161616;
+  stroke: #ffffff;
   stroke-width: 4;
   stroke-linecap: round;
   stroke-linejoin: round;
@@ -21,7 +21,7 @@
 }
 
 .progress .btn svg path {
-  stroke: #161616;
+  stroke: #ffffff;
 }
 
 .progress {
@@ -43,7 +43,7 @@
   width: 100%;
   height: 3px;
   border-radius: 2px;
-  background: #161616;
+  background: #ffffff;
   transform-origin: left;
   transform: scaleX(0);
   transition: transform 2s linear;
